<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:checkable="false"
        android:title="@string/menu_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/my_account"
        android:checkable="false"
        android:title="@string/menu_accont"
        app:showAsAction="never"/>
    <item
        android:id="@+id/report_event"
        android:checkable="false"
        android:title="@string/menu_report"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:checkable="false"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/exit"
        android:checkable="false"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
</menu>